force-app/main/default/objects/BookingGuest__c/BookingGuest__c.object-meta.xml
<CustomObject>
    <label>BookingGuest</label>
    <nameField>
        <label>BookingGuest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BookingGuests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>