force-app/main/default/objects/BookingGuest__c/fields/Age_Category__c.field-meta.xml
<CustomField>
    <fullName>Age_Category__c</fullName>
    <formula>IF(Age__c &lt; 12, &quot;Child&quot;, IF(Age__c &lt; 60 , &quot;Adults&quot;, &quot;Senior Citizen&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Category</label>
    <type>Text</type>
</CustomField>