force-app/main/default/objects/BookingGuest__c/validationRules/Age_must_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age must be greater than 0</errorMessage>
</ValidationRule>